Closed Bug 205366 Opened 23 years ago Closed 23 years ago

ifdef WIN/MACOS(X) ConvertTwipsToPixels because it isn't used elsewhere

Categories

(Core Graveyard :: Plug-ins, defect)

x86
BeOS
defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

/swap/BEOS/mozilla/layout/html/base/src/nsObjectFrame.cpp:4081: warning: `void ConvertTwipsToPixels(class nsIPresContext &, struct nsRect &, struct nsRect &)' defined but not used
Attachment #123046 - Flags: review?(av)
Attachment #123046 - Flags: review?(peterl)
Comment on attachment 123046 [details] [diff] [review] wrap function in ifdef r=av
Attachment #123046 - Flags: review?(av) → review+
Attachment #123046 - Flags: review?(peterl) → superreview?(peterv)
Attachment #123046 - Flags: superreview?(peterv) → superreview+
checked in
Status: UNCONFIRMED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: