Bug 205366 ifdef WIN/MACOS(X) ConvertTwipsToPixels because it isn't used elsewhere r=av sr=peterv